[package]
name = "get-request-info-rs"
version = "0.1.0"
authors = ["Aoki-Chan <aoki-chan@autistici.org>"]
edition = "2024"
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4", features = ["derive"] }
tower = "0.5"
hyper = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
